--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma": "^6.19.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "sass": "^1.97.2",
     "zod": "^4.3.5"
   },
