--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
+    "gsap": "^3.14.2",
     "next": "16.1.1",
     "next-auth": "^4.24.7",
+    "npm": "^11.7.0",
+    "ogl": "^1.0.11",
     "prettier": "^3.7.4",
     "prisma": "^6.19.1",
     "react": "19.2.3",
