--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "react-swipeable": "^7.0.2",
     "sass": "^1.97.2",
     "zod": "^4.3.5"
