--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "gsap": "^3.14.2",
     "next": "16.1.1",
     "next-auth": "^4.24.7",
