--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@prisma/client": "^6.19.1",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@types/react-redux": "^7.1.34",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "gsap": "^3.14.2",
@@ -27,8 +29,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-swipeable": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.97.2",
     "zod": "^4.3.5"
   },
