--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@google/genai": "^1.37.0",
     "@prisma/client": "^6.19.1",
     "@reduxjs/toolkit": "^2.11.2",
     "@types/react-redux": "^7.1.34",
@@ -29,10 +30,12 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-swipeable": "^7.0.2",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.97.2",
     "zod": "^4.3.5"
   },
