--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@google/genai": "^1.37.0",
     "@prisma/client": "^6.19.1",
     "@reduxjs/toolkit": "^2.11.2",
+    "@tanstack/react-query": "^5.90.19",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "gsap": "^3.14.2",
@@ -30,6 +32,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^10.0.2",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
