--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "next": "16.1.1",
     "next-auth": "^4.24.7",
-    "npm": "^11.7.0",
     "ogl": "^1.0.11",
     "prettier": "^3.7.4",
     "prisma": "^6.19.1",
