--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate Prisma client
+        run: npx prisma generate
+        env:
+          DATABASE_URL: ${{ secrets.MONGODB_URI }}
+
       - name: Run ESLint
         run: npm run lint
 
       - name: TypeScript type check
         run: npx tsc --noEmit
+        env:
+          DATABASE_URL: ${{ secrets.MONGODB_URI }}
 
       - name: Build application
         run: npm run build
         env:
+          DATABASE_URL: ${{ secrets.MONGODB_URI }}
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
